--- a/src/app/home/app-home/app-home.component.css
+++ b/src/app/home/app-home/app-home.component.css
@@ -1,5 +1,7 @@
 :host {
     display: block;
-    margin: 0;
+    margin: 0 auto;
+    margin-bottom: 20px;
     width: 100%;
+    max-width: 1200px;
   }
