--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .menu__nav{
     width: 100%;
-    height: 30px;
-    background-color: black;
-    font-family: 'Montserrat', sans-serif;
+    height: 40px;
+    background-color: rgb(29, 28, 28);
     padding: 5px;
     display: flex;
     flex-direction: row;
@@ -27,6 +27,9 @@
     
   }
   
+  .menu__list-item {
+    padding-top: 3px;
+  }
   .menu__list-item a{
     text-decoration: none;
     color: white;
@@ -34,4 +37,30 @@
     text-transform: uppercase;
     font-size: 20px;
     cursor: pointer;
+  }
+
+  .menu__list_isUser{
+    width: 100%;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 20px;
+    max-width: 1200px;
+    margin: 0;
+  }
+
+  .userDetails{
+    box-sizing: border-box;
+    display: inline-block;
+    color: white;
+    margin-right: 20px;
+    padding-top: 3px;
+  }
+
+  .menu{
+    display: flex;
+    flex-direction: row;
+    margin: 0;
   }
