--- a/src/app/backoffice/comments/comments.component.html
+++ b/src/app/backoffice/comments/comments.component.html
@@ -17,9 +17,9 @@
             <td>{{rowData.comment}}</td>
             <td>
                 <a href="#" [pRowToggler]="rowData">
-                    <button style="width: 7.5em; margin-right: 0.5em;" pButton type="button" label="Edit" class="ui-button-rounded"></button>
+                    <button style="width: 7.5em; margin-right: 0.5em;" pButton type="button" label="Edit" class="ui-button-rounded" [disabled]="(user|async)[0]?.username !== postUsername && (user|async)[0]?.role !== 'admin'? true : false"></button>
                 </a>
-                <button pButton style="width: 7.5em; margin-left: 0.5em;" type="button" label="Delete" class="ui-button-rounded ui-button-danger" (click)= "deleteComment(rowData._id)"></button></td>
+                <button pButton style="width: 7.5em; margin-left: 0.5em;" type="button" label="Delete" class="ui-button-rounded ui-button-danger" [disabled]=" (user|async)[0]?.username !== postUsername && (user|async)[0]?.role !== 'admin'? true : false" (click)="deleteComment(rowData._id)"></button></td>
         </tr>
     </ng-template>
     <ng-template let-ri="rowIndex" let-post pTemplate="rowexpansion" let-rowData let-columns="columns">
@@ -32,7 +32,7 @@
                             <textarea pInputTextarea autoResize="autoResize" name= "comment" type="text" formControlName= "comment"></textarea>
                             <app-error-messages [control]="updateCommentForm.get('comment')" class="invalid" [customErrors]="customErrorsMessages"></app-error-messages>
                         </div>
-                        <button pButton  style="width: 10em; margin: 0 auto;" type="button" label="Add Comment" (click)="updateComment(rowData._id)" [disabled]= "!updateCommentForm.valid"></button>
+                        <button pButton  style="width: 10em; margin: 0 auto;" type="button" label="Add Comment" (click)="updateComment(rowData._id)" [disabled]="!updateCommentForm.valid"></button>
                     </div>
                 </form> 
             </td>
