--- a/src/app/home/app-home/app-home.component.css
+++ b/src/app/home/app-home/app-home.component.css
@@ -1,6 +1,6 @@
 :host {
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
     margin-bottom: 20px;
     width: 100%;
     max-width: 1200px;
